UPDATE with branch "develop.tests" To H2 tests in memory

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope> <!-- Або 'test', якщо ви хочете, щоб вона була доступна тільки для тестів -->
+        </dependency>
 
         <dependency>
             <groupId>org.jsoup</groupId>
